2016-05-31 Andrea Manzi  <andrea.manzi@cern.ch>
        * added new deps
        * removed limits conf and deps
        * raised memcahced max memory
2016-05-25 Andrea Manzi  <andrea.manzi@cern.ch>
        * moved xrd_report and xrd_monitoring to the disknodes
        * fixed configuration of repositories
2016-03-13 Andrea Manzi  <andrea.manzi@cern.ch>
	* added mountpoints, pools and filesystems vars
        * added mysql_override var
        * added pools var
        * bug fixes
2016-02-23 Andrea Manzi  <andrea.manzi@cern.ch>
        * added gridftp redir support
        * moved disknodes to array
        * several bug fixes
2016-02-08 Andrea Manzi  <andrea.manzi@cern.ch>
        * puppet 4 support
2016-01-06 Andrea Manzi  <andrea.manzi@cern.ch>
        * fixed handling of multiple vos on disknode
2015-09-28 Andrea Manzi  <andrea.manzi@cern.ch>
	* fixed handling of multiple vos
