@@ -1,19 +1,0 @@
-name    'lcgdm-dpm'
-version '0.4.3'
-source 'https://github.com/cern-it-sdc-id/puppet-dpm'
-author 'lcgdm'
-license 'Apache License, Version 2.0'
-summary 'A wrapper for the DPM modules'
-description 'A wrapper for the DPM modules'
-project_page 'https://github.com/cern-it-sdc-id/puppet-dpm'
-
-## Add dependencies, if any:
-dependency 'lcgdm/gridftp', '0.2.0'
-dependency 'lcgdm/dmlite',  '0.4.2'
-dependency 'lcgdm/lcgdm',   '0.3.1'
-dependency 'lcgdm/xrootd',  '0.2.1'
-dependency 'puppetlabs/stdlib', '4.12.0'
-dependency 'lcgdm/voms',    '0.3.0'
-dependency 'puppetlabs/mysql', '3.4.0'
-dependency 'saz/memcached', '2.8.1'
-dependency 'CERNOps/bdii',  '0.1.0'
